Database Manager, CSV/JSON import, and user queries/charts (#5)
* Thread Roles through Admin_View/ChangePassword_View, add UserManagement.listUsers()

Admin_View and ChangePassword_View now carry the logged-in actor's full
Roles object instead of a bare username/isAdmin pair, so Admin_View can
pass itself straight into UserManagement.deleteUser(actor, ...) without
re-querying its own role. Home_View is untouched (username-only, out of
scope per the TODO note).

Also adds UserManagement.listUsers(), returning UserSummary
(username/role/mustChangePassword) for the upcoming admin table, and
trims the two finished items off Login_View's TODO list.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Add Database Manager, CSV/JSON import, and user queries/charts

- Admin_View becomes the Database Manager: drag-and-drop CSV/TSV/JSON/JSONL
  import into SQLite datasets, inferred foreign keys (RelationshipFinder),
  relationship diagram, joined view, share/remove datasets
- Home_View: read-only dataset browser, checked SELECT runner, and
  bar/line/pie/scatter charts computed by SQLite (ChartMaker)
- Shared pieces: DatabaseBrowser, BackgroundWork, ResultTable, ViewText,
  Views, SchemaDiagram, theme/login/home CSS, SampleDatabase
- Move feature docs from Javadoc into documentation/Features.md and the
  login TODO list into documentation/TODO.md
- Add resume-work skill

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>

---------

Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>